# example-claw

./: .gitignore  README.md  prefix.txt  pyproject.toml  suffix.txt  wsgi.py
example_claw/: __init__.py  admin.py  database.py  discord.py  prefix.txt  schema.sql  suffix.txt
example_claw/static/: admin.css
example_claw/templates/admin/: index.html
tests/: test_example_claw.py
