[tool.poetry]
name = "example-claw"
version = "0.1.0"
description = ""
authors = ["David Buckley <david@davidbuckley.ca>"]
readme = "README.md"

include = ["example_claw/*.txt"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
flask-discord-interactions = {git = "https://github.com/buckley-w-david/flask-discord-interactions.git"}
pyuwsgi = "^2.0.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
